...
        android:focusable="true"
        android:padding="14dp"
        android:text="@string/view_entrants"
        app:drawableStartCompat="@drawable/max_attendees" />

    <TextView
        android:id="@+id/view_map_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:drawablePadding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
...
        android:focusable="true"
        android:padding="14dp"
        android:text="@string/show_details_code"
        app:drawableStartCompat="@drawable/ic_qrcode" />

    <TextView
        android:id="@+id/ok_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/primaryGreyColor"
        android:paddingStart="16dp"
        android:textSize="15sp"
...
