...
            android:src="@color/secondaryGreyColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/go_back"
            android:padding="10dp"
...
                    android:text="@string/event_title"
                    android:textSize="40sp"
                    android:textColor="@color/black"/>

                <!-- This organizer options button can only be accessed by organizer -->
                <ImageButton
                    android:id="@+id/organizer_opt_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/organizer_options_events"
...
