<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/homeIcon"
        android:title="@string/home"
        android:icon="@drawable/home" />
    <item android:id="@+id/eventsIcon"
        android:title="@string/events"
        android:icon="@drawable/ticket"/>
    <item android:id="@+id/notificationsIcon"
        android:title="@string/notifications"
        android:icon="@drawable/notification" />
    <item android:id="@+id/profileIcon"
...
