...
                android:contentDescription="@string/edit_event_poster"
                android:src="@drawable/camera" />

        </FrameLayout>

        <EditText
            android:id="@+id/name_event"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
...
                android:textSize="12sp"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_event_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:height="48dp"
            android:backgroundTint="@color/primaryPurpleColor"
            android:text="@string/create_button"
...
